[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Placeholder/enemy.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/EnemyBlock.gd" type="Script" id=2]

[sub_resource type="VisualShader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 25.5255

[node name="testEnemy" type="KinematicBody2D"]
input_pickable = true
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
drops = {
"boredEyes": 1.0
}

[node name="Enemy" type="Sprite" parent="."]
modulate = Color( 0.917647, 0.827451, 1, 1 )
material = SubResource( 2 )
position = Vector2( 2.003, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.378 )
scale = Vector2( 1, 0.8 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
[connection signal="input_event" from="." to="." method="_on_Enemy_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Enemy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Enemy_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
